<resources>
    <string name="app_name">Aniculator</string>
    <string name="root">√</string>
    <string name="c">C</string>
    <string name="del">⊲</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="x">×</string>
    <string name="Plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Dep">÷</string>
    <string name="Minus">−</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Equal">=</string>
    <string name="_0">0</string>
    <string name="Dot">.</string>
    <string name="Quad">Quad</string>
    <string name="Percent">%</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="save">save</string>
</resources>