<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/calculator"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calcResult"
        android:textSize="@dimen/text_size"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnPercent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintVertical_weight="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPercent"
        android:text="@string/Percent"
        style="@style/specButtons"
        app:layout_constraintTop_toBottomOf="@+id/calcResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintBottom_toTopOf="@+id/btn1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnQuad"
        android:text="@string/Quad"
        style="@style/specButtons"
        android:textSize="@dimen/sp_10"
        app:layout_constraintTop_toBottomOf="@+id/calcResult"
        app:layout_constraintStart_toEndOf="@+id/btnPercent"
        app:layout_constraintEnd_toStartOf="@+id/btnRoot"
        app:layout_constraintBottom_toTopOf="@+id/btn2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRoot"
        android:text="@string/root"
        style="@style/specButtons"
        app:layout_constraintTop_toBottomOf="@+id/calcResult"
        app:layout_constraintStart_toEndOf="@+id/btnQuad"
        app:layout_constraintEnd_toStartOf="@+id/btnC"
        app:layout_constraintBottom_toTopOf="@+id/btn3"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnC"
        android:text="@string/c"
        style="@style/critButtons"
        app:layout_constraintTop_toBottomOf="@+id/calcResult"
        app:layout_constraintStart_toEndOf="@+id/btnRoot"
        app:layout_constraintEnd_toStartOf="@+id/btnDel"
        app:layout_constraintBottom_toTopOf="@+id/btnX"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDel"
        android:text="@string/del"
        style="@style/critButtons"
        app:layout_constraintTop_toBottomOf="@+id/calcResult"
        app:layout_constraintStart_toEndOf="@+id/btnC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnPlus"
        app:layout_constraintHorizontal_weight="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        android:text="@string/_1"
        android:onClick="btn"
        style="@style/numButtons"
        app:layout_constraintTop_toBottomOf="@+id/btnPercent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintBottom_toTopOf="@+id/btn4"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        android:text="@string/_2"
        android:onClick="btn"
        style="@style/numButtons"
        app:layout_constraintTop_toBottomOf="@+id/btnQuad"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintBottom_toTopOf="@+id/btn5"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        android:text="@string/_3"
        style="@style/numButtons"
        app:layout_constraintTop_toBottomOf="@+id/btnRoot"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btnX"
        app:layout_constraintBottom_toTopOf="@+id/btn6"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnX"
        android:text="@string/x"
        style="@style/moveButtons"
        app:layout_constraintTop_toBottomOf="@+id/btnC"
        app:layout_constraintStart_toEndOf="@id/btn3"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintBottom_toTopOf="@+id/btnDep"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlus"
        android:text="@string/Plus"
        style="@style/moveButtons"
        app:layout_constraintTop_toBottomOf="@+id/btnDel"
        app:layout_constraintStart_toEndOf="@id/btnX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnMinus"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        android:text="@string/_4"
        style="@style/numButtons"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintBottom_toTopOf="@+id/btn7"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn5"
        android:text="@string/_5"
        style="@style/numButtons"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintBottom_toTopOf="@+id/btn8"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn6"
        android:text="@string/_6"
        style="@style/numButtons"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btnDep"
        app:layout_constraintBottom_toTopOf="@+id/btn9"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDep"
        android:text="@string/Dep"
        style="@style/moveButtons"
        app:layout_constraintTop_toBottomOf="@+id/btnX"
        app:layout_constraintStart_toEndOf="@id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintBottom_toTopOf="@+id/btnEqual"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMinus"
        android:text="@string/Minus"
        style="@style/moveButtons"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus"
        app:layout_constraintStart_toEndOf="@id/btnDep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnEqual"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn7"
        android:text="@string/_7"
        style="@style/numButtons"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintBottom_toTopOf="@+id/btn0"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn8"
        android:text="@string/_8"
        style="@style/numButtons"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintBottom_toTopOf="@+id/btn0"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn9"
        android:text="@string/_9"
        style="@style/numButtons"
        app:layout_constraintTop_toBottomOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btnEqual"
        app:layout_constraintBottom_toTopOf="@+id/btnDot"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEqual"
        android:text="@string/Equal"
        style="@style/critButtons"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus"
        app:layout_constraintStart_toEndOf="@id/btn9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintVertical_weight="2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn0"
        android:text="@string/_0"
        style="@style/numButtons"
        app:layout_constraintTop_toBottomOf="@+id/btn7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDot"
        android:text="@string/Dot"
        style="@style/moveButtons"
        app:layout_constraintTop_toBottomOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btnEqual"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>