<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingActivity">
    <TextView
        android:id="@+id/theme"
        android:textSize="@dimen/sp_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/theme_switch"
        android:text="@string/theme"/>
    <TextView
        android:id="@+id/day"
        app:layout_constraintTop_toBottomOf="@id/theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/theme_switch"
        app:layout_constraintBottom_toTopOf="@id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:onClick="themer"
        app:layout_constraintTop_toBottomOf="@id/theme"
        app:layout_constraintStart_toEndOf="@id/day"
        app:layout_constraintEnd_toStartOf="@id/night"
        app:layout_constraintBottom_toTopOf="@id/save"
        android:id="@+id/theme_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/night"
        app:layout_constraintBottom_toTopOf="@id/save"
        app:layout_constraintStart_toEndOf="@id/theme_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/night"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:onClick="save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/theme_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save"/>
</androidx.constraintlayout.widget.ConstraintLayout>